2.21.2
 - fix: signal race condition when editing filters in AnalysisView (#148)
 - fix: signal race condition when editing plots in AnalysisView (#172)
 - enh: when batch-loading datasets, allow individual files to fail
 - enh: auto-select logs in AnalysisView
 - enh: improve table graph selection (remember graph, clear if unavailable)
2.21.1
 - fix: maximize image size in QuickView
 - fix: colormap for QPI data only updating for one image view in QuickView
 - ref: QuickView code needed tidying up
2.21.0
 - feat: implement showing dataset basins in the analysis view (#182)
 - feat: implement showing dataset logs in the analysis view (#140)
 - feat: implement showing dataset tables in the analysis view (#141)
 - enh: more Quick View default choices than "deform" and "area_um"
 - enh: update icon theme
 - docs: document new features in Analysis View
 - setup: pygments (for json formatting) is now an explicit dependency
 - setup: bump dclab to 0.62.9
 - ref: simplify logic in Analysis View
 - ref: do not override `QtWidgets`' `__setstate__` and `__getstate__`;
   use `write_pipeline_state` and `read_pipeline_state` instead
2.20.1
 - fix: regression TypeError when trying to plot contour data
2.20.0
 - feat: display and handle quantitative phase imaging data
 - fix: filter range control not updating limits, displaying value "100" (#183)
 - fix: filter range control not updating handles when resized
 - enh: improve plotting performance in QuickView polygon selection mode
2.19.1
 - fix: "buyukurganci-2022" was not actually the default viscosity model
 - ref: remove distutils dependency
 - docs: add developer's section
2.19.0
 - feat: support accessing private S3 basins (#174)
 - enh: enable lut selection in analysis view plots (#71)
 - fix: only allow user to choose "R.exe" in R binary manual search (#173)
 - enh: correctly show system R binary in settings
 - ref: migrate from pyqt5 to pyqt6 (#165)
 - ref: migrate from pkg_resources to importlib.resources (#155)