@@ -16,6 +16,9 @@ class AnalysisView(QtWidgets.QWidget):
         with importlib.resources.as_file(ref) as path_ui:
             uic.loadUi(path_ui, self)
 
+        self._quickview_slot_index = 0
+        self._quickview_filt_index = 0
+
         self.page_widgets = [
             self.widget_basins,
             self.widget_meta,
@@ -39,7 +42,18 @@ class AnalysisView(QtWidgets.QWidget):
         self.tabWidget.setCurrentIndex(0)
         self.tabWidget.currentChanged.connect(self.update_content)
 
+    @QtCore.pyqtSlot(int, int)
+    def on_quickview(self, slot_index, filt_index):
+        """Signal from the block matrix"""
+        self._quickview_filt_index = filt_index
+        self._quickview_slot_index = slot_index
+        self.update_content()
+
     def set_pipeline(self, pipeline):
+        self._quickview_filt_index = min(self._quickview_filt_index,
+                                         len(pipeline.filters) - 1)
+        self._quickview_slot_index = min(self._quickview_slot_index,
+                                         len(pipeline.slots) - 1)
         for widget in self.page_widgets:
             widget.set_pipeline(pipeline)
         self.update_content()
@@ -49,5 +63,7 @@ class AnalysisView(QtWidgets.QWidget):
         cur_page = self.tabWidget.currentWidget()
         for widget in self.page_widgets:
             if widget.parent() is cur_page:
-                widget.update_content()
+                widget.update_content(
+                    slot_index=self._quickview_slot_index,
+                    filt_index=self._quickview_filt_index)
                 break
