@@ -1,6 +1,7 @@
 2.21.2
  - fix: signal race condition when editing filters in AnalysisView (#148)
  - fix: signal race condition when editing plots in AnalysisView (#172)
+ - enh: use QuickView selection to navigate AnalysisView slots and filters
  - enh: when batch-loading datasets, allow individual files to fail
  - enh: auto-select logs in AnalysisView
  - enh: improve table graph selection (remember graph, clear if unavailable)
